--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ django-decouple==2.1
 django-extensions==2.2.8
 django-registration==3.1
 django-rest-auth==0.9.5
+django-webpack-loader==0.7.0
 djangorestframework==3.11.0
 idna==2.9
 oauthlib==3.1.0
