--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,7 +10,8 @@
   "dependencies": {
     "core-js": "^3.6.4",
     "vue": "^2.6.11",
-    "vue-router": "^3.1.5"
+    "vue-router": "^3.1.5",
+    "webpack-bundle-tracker": "^0.4.3"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.2.0",
@@ -23,8 +24,7 @@
     "eslint-plugin-prettier": "^3.1.1",
     "eslint-plugin-vue": "^6.1.2",
     "prettier": "^1.19.1",
-    "vue-template-compiler": "^2.6.11",
-    "webpack-bundle-tracker": "^0.4.3"
+    "vue-template-compiler": "^2.6.11"
   },
   "eslintConfig": {
     "root": true,
